# robot_rust_2022

./: .gitignore  Cargo.toml  swap_config_id.sh
arm/: Cargo.toml  black_pill.cfg  openocd.cfg  openocd.gdb  stm32f103c8_blue_pill.cfg
arm/base_roulante/: Cargo.toml
arm/base_roulante/src/: main.rs
arm/can_bus/: Cargo.toml
arm/can_bus/src/: lib.rs  main.rs  min_example.rs
arm/can_bus/src/protocol/: errors.rs  header.rs  message.rs  message_in_progress.rs  mod.rs  packet.rs  protocol.rs
arm/can_herkulex/: Cargo.toml
arm/can_herkulex/src/: main.rs
arm/herkulex/: Cargo.toml
arm/herkulex/src/: main.rs
arm/herkulex/src/motors/: communication.rs  mod.rs
arm/herkulex/src/motors/motor/: mod.rs
arm/targets/: stm32f1x.cfg
asm/can_bus/: Cargo.toml
asm/can_bus/src/: main.rs
asm/herkulex/: Cargo.toml
asm/herkulex/src/: backup.rs  main.rs  servo.rs
asm/herkulex/src/motors/: communication.rs  mod.rs
asm/herkulex/src/motors/motor_group/: mod.rs
asm/herkulex/src/motors/motor_group/motor/: mod.rs
base_roulante/: Cargo.toml  README.md
can_bus/: Cargo.toml
can_bus/src/: main.rs
herkulex/: Cargo.toml
herkulex/src/: main.rs
network_protocol/: Cargo.toml
network_protocol/src/: lib.rs
network_protocol/src/model/: header.rs  message.rs  mod.rs  packet.rs  protocol_constants.rs
network_protocol/src/model/tests/: header_tests.rs  message_tests.rs  mod.rs  packet_tests.rs
x86_tests/: Cargo.toml
x86_tests/tests/: network_protocol.rs
