[package]
authors = ["Joelimgu <joelimgu@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "base_roulante"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
bxcan = "0.5.1"
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt", "medium", "has-can"]}
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-semihosting = "0.6"
# Allows hprintln method. Caution, a hprintln is very slow and use interrupt to work, you should avoid it for the final code version
cortex-m-semihosting = "0.5"
stm32f1 = "0.14.0"
fugit = "0.3.6"

#[dependencies.stm32f1xx-hal]
#features = ["stm32f103", "rt", "medium"] #por que no deja has-can cuando esta en las features de .toml
#version = "0.6.1"


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "base_roulante"
test = false
bench = false
