[package]
name = "can_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
bxcan = "0.6.0"
#stm32f1xx-hal = {git = "https://github.com/stm32-rs/stm32f1xx-hal" , features = ["stm32f103", "rt", "medium", "has-can"] }
cortex-m-semihosting = "0.3.3"
network_protocol = {path="../../network_protocol"}
stm32f1 = "0.14.0"
heapless = "0.7.13"

[dependencies.stm32f1xx-hal]
version = "0.9"
features = ["stm32f103", "rt", "medium", "has-can"]
